[package]
name = "openobserve-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
enterprise = [
    "dep:o2_dex",
    "dep:o2_enterprise",
    "dep:o2_openfga",
    "dep:o2_ratelimit",
    "openobserve-core/enterprise",
]
cloud = ["enterprise", "o2_enterprise/cloud", "openobserve-core/cloud"]
vectorscan = ["openobserve-core/vectorscan"]
vortex = ["config/vortex", "openobserve-core/vortex"]
profiling = [
    "dep:tikv-jemalloc-ctl",
    "dep:tikv-jemalloc-sys",
    "dep:jemalloc_pprof",
    "dep:pprof",
]

# tikv-jemalloc-sys is a link-time dependency: it forces the "profiling"
# feature on the jemalloc sys crate that jemalloc_pprof requires.
[package.metadata.cargo-machete]
ignored = ["tikv-jemalloc-sys"]

[dependencies]
openobserve-core = { path = "../core" }
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
http.workspace = true
http-body-util.workspace = true
mime_guess = "2.0"
ahash.workspace = true
anyhow.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
cron.workspace = true
datafusion.workspace = true
arrow.workspace = true
arrow-flight.workspace = true
arrow-schema.workspace = true
flate2.workspace = true
futures.workspace = true
hashbrown.workspace = true
http-auth-basic = "0.3"
itertools.workspace = true
jsonwebtoken = { version = "10.3", features = ["aws_lc_rs"] }
log.workspace = true
o2_dex = { workspace = true, optional = true }
o2_enterprise = { workspace = true, optional = true, default-features = false }
o2_openfga = { workspace = true, optional = true }
o2_ratelimit = { workspace = true, optional = true }
opentelemetry.workspace = true
opentelemetry-proto.workspace = true
parking_lot.workspace = true
promql-parser = { version = "0.6", git = "https://github.com/openobserve/promql-parser", branch = "openobserve" }
prost.workspace = true
proto.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
rust-embed-for-web = "11.3"
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
snap.workspace = true
svix-ksuid.workspace = true
time.workspace = true
tikv-jemalloc-ctl = { version = "0.6", optional = true, features = [
    "use_std",
    "stats",
    "profiling",
] }
tikv-jemalloc-sys = { version = "0.6", optional = true, features = [
    "profiling",
] }
jemalloc_pprof = { version = "0.8", optional = true, features = [
    "symbolize",
    "flamegraph",
] }
pprof = { version = "0.15", optional = true, features = [
    "flamegraph",
    "protobuf-codec",
] }
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
url.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
vector-enrichment.workspace = true
vrl.workspace = true
config.workspace = true
infra.workspace = true
ingester.workspace = true
zip.workspace = true
futures-util = "0.3.31"
tokio-stream.workspace = true
mime = "0.3.17"
flight.workspace = true
async-stream.workspace = true

[dev-dependencies]
expect-test.workspace = true
base64 = "0.22"
float-cmp = "0.10"
multer = "3.1"
rcgen = "0.14.4"
