[package]
name = "openobserve-api-query"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
enterprise = [
    "dep:o2_enterprise",
    "dep:o2_openfga",
    "openobserve-core/enterprise",
    "promql-service/enterprise",
    "search_service/enterprise",
]
cloud = ["enterprise", "openobserve-core/cloud"]
vectorscan = [
    "openobserve-core/vectorscan",
    "promql-service/vectorscan",
    "search_service/vectorscan",
]
vortex = [
    "openobserve-core/vortex",
    "promql-service/vortex",
    "search_service/vortex",
]

[dependencies]
common.workspace = true
audit.workspace = true
db.workspace = true
openobserve-api-common.workspace = true
openobserve-core.workspace = true
ingestion-common.workspace = true
search.workspace = true
search_service.workspace = true
usage_reporting.workspace = true
promql.workspace = true
promql-service.workspace = true
arrow-schema.workspace = true
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
config.workspace = true
futures.workspace = true
hashbrown.workspace = true
http.workspace = true
infra.workspace = true
log.workspace = true
o2_enterprise = { workspace = true, optional = true, default-features = false }
o2_openfga = { workspace = true, optional = true }
promql-parser.workspace = true
proto.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tracing.workspace = true
utoipa.workspace = true
transform.workspace = true
vector-enrichment.workspace = true
