[package]
name = "automation"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
default = []
enterprise = ["dep:o2_enterprise"]

[dependencies]
async-trait.workspace = true
chrono.workspace = true
config.workspace = true
infra.workspace = true
ingestion.workspace = true
log.workspace = true
o2_enterprise = { workspace = true, optional = true, default-features = false }
sea-orm.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
