[package]
name = "openobserve-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
enterprise = ["dep:o2_enterprise", "config/enterprise"]
cloud = ["enterprise", "common/cloud"]
vectorscan = ["enterprise"]

[dependencies]
anyhow.workspace = true
arrow-schema.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
common.workspace = true
config.workspace = true
dashmap.workspace = true
hashbrown.workspace = true
infra.workspace = true
ingester.workspace = true
itertools.workspace = true
log.workspace = true
o2_enterprise = { workspace = true, optional = true, default-features = false }
proto.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
