[package]
name = "config"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["gxhash"]
gxhash = ["dep:gxhash"]

[dependencies]
aes-siv.workspace = true
ahash.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
arrow.workspace = true
arrow-json.workspace = true
arrow-schema.workspace = true
async-recursion.workspace = true
async-walkdir.workspace = true
aws-config.workspace = true
aws-sdk-sns.workspace = true
base64.workspace = true
bitvec.workspace = true
bytes.workspace = true
byteorder.workspace = true
chrono.workspace = true
cityhasher.workspace = true
chromiumoxide.workspace = true
datafusion.workspace = true
dashmap.workspace = true
dotenv_config.workspace = true
dotenvy.workspace = true
faststr.workspace = true
futures.workspace = true
get_if_addrs.workspace = true
getrandom.workspace = true
gxhash = { version = "~3.4.1", optional = true }
hashbrown.workspace = true
hex.workspace = true
indexmap.workspace = true
itertools.workspace = true
lettre.workspace = true
log.workspace = true
md5.workspace = true
memchr.workspace = true
murmur3.workspace = true
once_cell.workspace = true
ordered-float.workspace = true
parking_lot.workspace = true
parquet.workspace = true
prometheus.workspace = true
proto.workspace = true
reqwest.workspace = true
regex.workspace = true
rand.workspace = true
sea-orm = "1.1.3"
serde.workspace = true
serde_json.workspace = true
segment.workspace = true
sha256.workspace = true
sqlparser.workspace = true
sqlx.workspace = true
strum.workspace = true
svix-ksuid.workspace = true
sysinfo.workspace = true
tantivy.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
urlencoding.workspace = true
utoipa.workspace = true
vrl.workspace = true

[dev-dependencies]
expect-test.workspace = true
