[package]
name = "config"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["gxhash"]
gxhash = ["dep:gxhash"]

[dependencies]
aes-siv.workspace = true
ahash.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
argon2.workspace = true
arrow.workspace = true
arrow-json.workspace = true
arrow-schema.workspace = true
async-recursion.workspace = true
async-fs.workspace = true
aws-config.workspace = true
aws-sdk-sns.workspace = true
axum.workspace = true
base64.workspace = true
bitvec.workspace = true
bytes.workspace = true
byteorder.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
cityhasher.workspace = true
chromiumoxide.workspace = true
cron.workspace = true
datafusion.workspace = true
dashmap.workspace = true
dotenv_config.workspace = true
dotenvy.workspace = true
faststr.workspace = true
futures.workspace = true
local-ip-address.workspace = true
gxhash = { version = "~3.4.1", optional = true }
hashbrown.workspace = true
hex.workspace = true
itoa = "1.0"
ryu = "1.0"
indexmap.workspace = true
itertools.workspace = true
lettre.workspace = true
log.workspace = true
md5.workspace = true
memchr.workspace = true
murmur3.workspace = true
once_cell.workspace = true
opentelemetry.workspace = true
ordered-float.workspace = true
parking_lot.workspace = true
parquet.workspace = true
pin-project-lite.workspace = true
prometheus.workspace = true
proto.workspace = true
reqwest.workspace = true
regex.workspace = true
rand.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
segment.workspace = true
sha256.workspace = true
sqlparser.workspace = true
sqlx.workspace = true
strum.workspace = true
svix-ksuid.workspace = true
sysinfo.workspace = true
tantivy.workspace = true
tantivy-fst.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
urlencoding.workspace = true
utoipa.workspace = true
uuid.workspace = true
vrl.workspace = true
roaring.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tracing-opentelemetry.workspace = true

[dev-dependencies]
expect-test.workspace = true
float-cmp = "0.10"

[build-dependencies]
chrono.workspace = true
