[package]
name = "openobserve-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
enterprise = [
    "dep:o2_enterprise",
    "dep:o2_openfga",
    "common/enterprise",
    "config/enterprise",
    "search/enterprise",
    "openobserve-alerts/enterprise",
    "openobserve-query-evaluation/enterprise",
    "openobserve-ingestion/enterprise",
    "openobserve-catalog/enterprise",
    "openobserve-enrichment/enterprise",
    "openobserve-organization/enterprise",
    "openobserve-pipeline/enterprise",
    "openobserve-transform/enterprise",
    "openobserve-scheduler/enterprise",
    "openobserve-compactor/enterprise",
    "openobserve-dashboards/enterprise",
    "openobserve-reports/enterprise",
    "openobserve-search-service/enterprise",
    "openobserve-self-reporting/enterprise",
]
cloud = [
    "infra/cloud",
    "enterprise",
    "o2_enterprise/cloud",
    "common/cloud",
    "openobserve-alerts/cloud",
    "openobserve-self-reporting/cloud",
    "openobserve-organization/cloud",
    "openobserve-catalog/cloud",
]
vectorscan = [
    "o2_enterprise/vectorscan",
    "openobserve-ingestion/vectorscan",
    "openobserve-enrichment/vectorscan",
    "search/vectorscan",
    "openobserve-search-service/vectorscan",
    "openobserve-catalog/vectorscan",
]
vortex = [
    "config/vortex",
    "o2_enterprise?/vortex",
    "openobserve-compactor/vortex",
    "search/vortex",
]

[dependencies]
common.workspace = true
openobserve-alerts.workspace = true
openobserve-query-evaluation.workspace = true
openobserve-ingestion.workspace = true
openobserve-enrichment.workspace = true
openobserve-organization.workspace = true
openobserve-pipeline.workspace = true
openobserve-transform.workspace = true
openobserve-scheduler.workspace = true
openobserve-compactor.workspace = true
openobserve-dashboards.workspace = true
openobserve-reports.workspace = true
openobserve-search-service.workspace = true
openobserve-self-reporting.workspace = true
openobserve-catalog.workspace = true
search.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
arrow-schema.workspace = true
log.workspace = true
o2_enterprise = { workspace = true, optional = true, default-features = false }
o2_openfga = { workspace = true, optional = true }
proto.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
config.workspace = true
infra.workspace = true
wal.workspace = true
