[package]
name = "openobserve-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
enterprise = [
    "db/enterprise",
    "audit/enterprise",
    "dep:o2_dex",
    "dep:o2_enterprise",
    "dep:o2_openfga",
    "common/enterprise",
    "config/enterprise",
    "promql/enterprise",
    "promql-service/enterprise",
    "search/enterprise",
    "search_service/enterprise",
    "stream/enterprise",
    "usage_reporting/enterprise",
]
cloud = [
    "db/cloud",
    "infra/cloud",
    "enterprise",
    "o2_enterprise/cloud",
    "common/cloud",
    "stream/cloud",
]
vectorscan = [
    "db/vectorscan",
    "o2_enterprise/vectorscan",
    "search/vectorscan",
    "search_service/vectorscan",
    "promql-service/vectorscan",
    "stream/vectorscan",
]

[dependencies]
db.workspace = true
audit.workspace = true
common.workspace = true
openobserve-node.workspace = true
transform.workspace = true
vector-enrichment.workspace = true
vrl.workspace = true
promql.workspace = true
promql-service.workspace = true
search.workspace = true
search_service.workspace = true
ingestion-common.workspace = true
schema.workspace = true
stream.workspace = true
usage_reporting.workspace = true
axum.workspace = true
http.workspace = true
http-body-util.workspace = true
anyhow.workspace = true
async-trait.workspace = true
aws-sdk-sns.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
cron.workspace = true
dashmap.workspace = true
datafusion.workspace = true
arrow.workspace = true
arrow-json.workspace = true
arrow-schema.workspace = true
flate2.workspace = true
futures.workspace = true
hashbrown.workspace = true
itertools.workspace = true
jsonwebtoken.workspace = true
log.workspace = true
md5.workspace = true
o2_dex = { workspace = true, optional = true }
o2_enterprise = { workspace = true, optional = true, default-features = false }
o2_openfga = { workspace = true, optional = true }
opentelemetry.workspace = true
opentelemetry-proto.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
promql-parser.workspace = true
prost.workspace = true
prost-wkt-types.workspace = true
proto.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
snap.workspace = true
svix-ksuid.workspace = true
thiserror.workspace = true
time.workspace = true
tiktoken-rs.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
url.workspace = true
utoipa.workspace = true
version-compare.workspace = true
config.workspace = true
infra.workspace = true
ingester.workspace = true
chromiumoxide.workspace = true
lettre.workspace = true
futures-util.workspace = true

[dev-dependencies]
multer.workspace = true
