[package]
name = "db"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
default = []
enterprise = [
    "dep:openobserve-cipher",
    "openobserve-cipher/enterprise",
    "dep:o2_enterprise",
    "dep:o2_openfga",
    "common/enterprise",
    "config/enterprise",
]
cloud = ["enterprise", "o2_enterprise/cloud"]
vectorscan = ["dep:o2_enterprise", "o2_enterprise/vectorscan"]

[dependencies]
anyhow.workspace = true
arrow.workspace = true
arrow-schema.workspace = true
bytes.workspace = true
chrono.workspace = true
openobserve-cipher = { workspace = true, optional = true }
common.workspace = true
config.workspace = true
cron.workspace = true
dashmap.workspace = true
hashbrown.workspace = true
hashlink.workspace = true
infra.workspace = true
ingester.workspace = true
itertools.workspace = true
log.workspace = true
o2_enterprise = { workspace = true, optional = true, default-features = false }
o2_openfga = { workspace = true, optional = true }
parquet.workspace = true
proto.workspace = true
rayon.workspace = true
regex.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
svix-ksuid.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
transform.workspace = true
