[package]
name = "openobserve-enrichment"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
enterprise = [
    "common/enterprise",
    "config/enterprise",
    "dep:o2_enterprise",
    "openobserve-compactor/enterprise",
    "openobserve-ingestion/enterprise",
    "openobserve-search-service/enterprise",
]
cloud = [
    "enterprise",
    "common/cloud",
    "o2_enterprise/cloud",
    "openobserve-compactor/cloud",
    "openobserve-ingestion/cloud",
    "openobserve-search-service/cloud",
]
vectorscan = [
    "enterprise",
    "openobserve-ingestion/vectorscan",
    "openobserve-search-service/vectorscan",
]

[dependencies]
anyhow.workspace = true
arrow.workspace = true
arrow-json.workspace = true
arrow-schema.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
common.workspace = true
config.workspace = true
csv.workspace = true
futures.workspace = true
futures-util.workspace = true
hashbrown.workspace = true
infra.workspace = true
log.workspace = true
maxminddb.workspace = true
o2_enterprise = { workspace = true, optional = true, default-features = false }
openobserve-catalog.workspace = true
openobserve-compactor.workspace = true
openobserve-ingestion.workspace = true
openobserve-search-service.workspace = true
openobserve-transform.workspace = true
parquet.workspace = true
proto.workspace = true
rayon.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
search.workspace = true
tokio.workspace = true
vector-enrichment.workspace = true
vrl.workspace = true

[dev-dependencies]
multer.workspace = true
