[package]
name = "infra"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ahash.workspace = true
anyhow.workspace = true
async-trait.workspace = true
aws-sdk-dynamodb.workspace = true
aws-config.workspace = true
bytes.workspace = true
chrono.workspace = true
config.workspace = true
datafusion.workspace = true
etcd-client.workspace = true
futures.workspace = true
hashbrown.workspace = true
hashlink.workspace = true
log.workspace = true
object_store.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
sled.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
