[package]
name = "infra"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
cloud = []

[dependencies]
aes-siv.workspace = true
ahash.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
arrow.workspace = true
async-recursion.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
config.workspace = true
datafusion.workspace = true
futures.workspace = true
hashbrown.workspace = true
hashlink.workspace = true
itertools.workspace = true
log.workspace = true
async-nats.workspace = true
object_store.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
parquet.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sqlx.workspace = true
svix-ksuid.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
zstd.workspace = true
tracing.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
reqwest.workspace = true
tonic.workspace = true
opentelemetry.workspace = true
tracing-opentelemetry.workspace = true
proto.workspace = true

[dev-dependencies]
collapse.workspace = true
sea-orm = { workspace = true, features = ["mock"] }
tempfile.workspace = true
