[package]
name = "ingester"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wal.workspace = true
bytes.workspace = true
byteorder.workspace = true
hashbrown.workspace = true
snafu.workspace = true
indexmap.workspace = true
arrow.workspace = true
arrow-schema.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "wal-reader"
path = "bin/wal-reader.rs"
