[package]
name = "ingester"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wal.workspace = true
arrow.workspace = true
arrow-schema.workspace = true
bytes.workspace = true
byteorder.workspace = true
chrono.workspace = true
hashbrown.workspace = true
indexmap.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
uuid.workspace = true

[[bin]]
name = "wal-reader"
path = "bin/wal-reader.rs"
